--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2021"
 prost = "0.9"
 prost-types = "0.9.0"
 uuid = { version = "0.8", features = ["v4"] }
-# Awaiting release with https://github.com/hyperium/tonic/commit/468e4221f0c496d9ffb4de24d3658b9267e884b1
-tonic = { git = "https://github.com/hyperium/tonic", rev = "d6c0fc112b2288a080fd0a727453b24d666e3d79", features = ["tls", "compression", "tls-roots"]}
+tonic = { version = "0.6.2", features = ["tls", "compression", "tls-roots"]}
 
 [dev-dependencies]
 async-stream = "0.3"
@@ -18,3 +17,7 @@ tokio-stream = {version = "0.1", features = ["net"]}
 
 [build-dependencies]
 tonic-build = "0.6.2"
+
+[patch.crates-io]
+# Awaiting release with https://github.com/hyperium/tonic/commit/468e4221f0c496d9ffb4de24d3658b9267e884b1
+tonic = { git = "https://github.com/hyperium/tonic", rev = "d6c0fc112b2288a080fd0a727453b24d666e3d79" }
