--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/ovr/tinkoff-invest-rust"
 prost = "0.9"
 prost-types = "0.9.0"
 uuid = { version = "0.8", features = ["v4"] }
-tonic = { version = "0.6.2", features = ["tls", "compression", "tls-roots"]}
+tonic = { version = "0.8.0", features = ["tls", "tls-roots", "gzip"]}
 
 [dev-dependencies]
 async-stream = "0.3"
@@ -20,8 +20,4 @@ tokio-stream = {version = "0.1", features = ["net"]}
 futures-util = {version = "0.3.21"}
 
 [build-dependencies]
-tonic-build = { version = "0.6.2", features = ["rustfmt"] }
-
-[patch.crates-io]
-# Awaiting release with https://github.com/hyperium/tonic/commit/468e4221f0c496d9ffb4de24d3658b9267e884b1
-tonic = { git = "https://github.com/hyperium/tonic", rev = "d6c0fc112b2288a080fd0a727453b24d666e3d79" }
+tonic-build = { version = "0.8.0", features = [] }
